feat: Complete Vigia hackathon implementation
✅ Multi-wallet support (MetaMask, Rabbit, Coinbase, Trust)
✅ IPFS integration with Storacha/Web3.Storage
✅ Smart contract deployed on Lisk Sepolia (0x9aD20ACF1E3592efF473B510603f5f647994cE9b)
✅ Real-time blockchain data integration in map
✅ Complete README with project documentation
✅ Auto-refresh functionality for new reports
✅ Community validation system
✅ Responsive UI with map and feed views

Ready for Aleph Hackathon 2025 submission!

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,16 @@
-# Variables de entorno para el proyecto Vigia
-# ⚠️ NUNCA subas este archivo a Git con claves reales
+# Configuración de red blockchain
+# Lisk Sepolia Testnet Private Key
+PRIVATE_KEY=
 
-# Ethereum Sepolia (para testing)
-SEPOLIA_RPC_URL=https://rpc.sepolia.org
-SEPOLIA_PRIVATE_KEY=0x...
+# Web3.Storage / Storacha Configuration
+WEB3_STORAGE_EMAIL=
+WEB3_STORAGE_SPACE=
+WEB3_STORAGE_DID=
 
-# Lisk Sepolia Testnet (L2)
-# Obtén ETH gratis en: https://sepolia-faucet.lisk.com/
-LISK_PRIVATE_KEY=0x...
+# Network URLs
+LISK_SEPOLIA_RPC_URL=
+HARDHAT_RPC_URL=
 
-# Ejemplo de como obtener una clave privada:
-# 1. Crea una wallet nueva en MetaMask
-# 2. Ve a Configuración > Seguridad y privacidad > Mostrar clave privada
-# 3. Copia la clave privada (empieza con 0x...)
-# 4. Pégala arriba reemplazando 0x...
-
-# URLs RPC (ya configuradas en hardhat.config.ts)
-# Lisk Sepolia: https://rpc.sepolia-api.lisk.com
-# Lisk Mainnet: https://rpc.api.lisk.com
+# Deployed Contract Addresses
+VIGIA_CONTRACT_ADDRESS_HARDHAT=
+VIGIA_CONTRACT_ADDRESS_LISK_SEPOLIA=
