feat: optimize for Vercel deployment
- Move ethers to dependencies (needed in frontend)
- Add vercel.json with memory optimizations
- Optimize webpack config to reduce bundle size
- Exclude Hardhat files from frontend bundle
- Add NODE_OPTIONS for increased memory limit

--- a/.gitignore
+++ b/.gitignore
@@ -21,15 +21,22 @@ out
 
 # Hardhat Build Artifacts
 /artifacts
+/artifacts-zk
 
 # Hardhat compilation (v2) support directory
 /cache
+/cache-zk
 
 # Typechain output
 /types
+/typechain-types
 
 # Hardhat coverage reports
 /coverage
+/coverage.json
+
+# Hardhat Ignition default folder for deployments against a local node
+ignition/deployments/chain-31337
 
 # OS generated files
 .DS_Store
@@ -45,3 +52,9 @@ Thumbs.db
 .idea/
 *.swp
 *.swo
+
+# Vercel
+.vercel
+
+# Backup files
+*.backup
