--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "3.25.67"
+    "zod": "3.25.67",
+    "ethers": "^6.15.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^4.0.0",
@@ -80,7 +81,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.2.1",
-    "ethers": "^6.15.0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "^3.0.3",
     "postcss": "^8.5",
